@@ -1,20 +1,11 @@
 package com.example.PlaceAdminister.Security.user;
 
-import com.example.PlaceAdminister.DTO.RoomDTO;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.json.JSONArray;
-import org.json.JSONException;
-import org.json.JSONObject;
-import org.json.JSONTokener;
-
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class UserRepository  {
@@ -55,10 +46,17 @@ public class UserRepository  {
 
     public User searchByUserName( String userName, String filePath) {
         List<User> dataList = readFromJsonFile(filePath);
-        List<User> user =  dataList.stream()
-                .filter(data -> data.getUsername().equals(userName)).collect(Collectors.toList());
+        List<User> user = dataList.stream()
+                .filter(data -> data.getUsername().equals(userName)).toList();
         return user.get(0);
     }
+
+  public User findByEmail( String email, String filePath) {
+    List<User> dataList = readFromJsonFile(filePath);
+    List<User> user = dataList.stream()
+            .filter(data -> data.getEmail().equals(email)).toList();
+    return user.get(0);
+  }
 
 //    public List<RoomDTO> searchByCategoryId( Long category_id, String filePath) {
 //        List<RoomDTO> dataList = readFromJsonFile(filePath);
@@ -69,41 +67,34 @@ public class UserRepository  {
 //    }
 
 
-  public RoomDTO UpdateById(Long id , RoomDTO roomDTO , String filePath) {
-    try {
-      // Step 1: Read the JSON file and parse it
-      File jsonFile = new File(filePath);
-      FileInputStream fis = new FileInputStream(jsonFile);
-      JSONTokener tokener = new JSONTokener(fis);
-      JSONArray jsonArray = new JSONArray(tokener);
-
-      // Step 2 and 3: Identify and update the specific element
-      for (int i = 0; i < jsonArray.length(); i++) {
-        JSONObject element = jsonArray.getJSONObject(i);
-        if (element.getLong("id") == (id)) { // Assuming "id" is the identifier for the element
-          System.out.println(element.getInt("id"));
-          element.put("id", id);
-          element.put("status", roomDTO.getStatus());
-          element.put("time_of_reservation", roomDTO.getTime_of_reservation());
-//                    element.put("room_id", roomDTO.getRoom_id());
-          // Add more modifications as needed
-        }
-      }
-
-      // Step 4: Write the updated data back to the JSON file
-      FileWriter fileWriter = new FileWriter(jsonFile);
-      jsonArray.write(fileWriter);
-      fileWriter.flush();
-      fileWriter.close();
-    } catch (IOException e) {
-      e.printStackTrace();
-    } catch (JSONException e) {
-      throw new RuntimeException(e);
-    }
-
-    return roomDTO;
-
-
-  }
+//  public User UpdateById(Long id , User roomDTO , String filePath) {
+//    try {
+//      // Step 1: Read the JSON file and parse it
+//      File jsonFile = new File(filePath);
+//      FileInputStream fis = new FileInputStream(jsonFile);
+//      JSONTokener tokener = new JSONTokener(fis);
+//      JSONArray jsonArray = new JSONArray(tokener);
+//
+//      // Step 2 and 3: Identify and update the specific element
+//      for (int i = 0; i < jsonArray.length(); i++) {
+//        JSONObject element = jsonArray.getJSONObject(i);
+//        if (element.getLong("id") == (id)) { // Assuming "id" is the identifier for the element
+//
+//        }
+//      }
+//
+//      // Step 4: Write the updated data back to the JSON file
+//      FileWriter fileWriter = new FileWriter(jsonFile);
+//      jsonArray.write(fileWriter);
+//      fileWriter.flush();
+//      fileWriter.close();
+//    } catch (IOException e) {
+//      e.printStackTrace();
+//    } catch (JSONException e) {
+//      throw new RuntimeException(e);
+//    }
+//
+//    return roomDTO;
+//  }
 
 }
